lib/device_volume_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/device_volume.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class DeviceVolumeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DeviceVolumeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DeviceVolumeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// ── Public API ──────────────────────────────────────────────────────────────
  DeviceVolumeResult device_volume_get(int channel) {
    return _device_volume_get(channel);
  }

  late final _device_volume_getPtr =
      _lookup<ffi.NativeFunction<DeviceVolumeResult Function(ffi.Int32)>>(
        'device_volume_get',
      );
  late final _device_volume_get = _device_volume_getPtr
      .asFunction<DeviceVolumeResult Function(int)>();

  DeviceVolumeResult device_volume_set(
    int channel,
    int value,
    int show_system_ui,
  ) {
    return _device_volume_set(channel, value, show_system_ui);
  }

  late final _device_volume_setPtr =
      _lookup<
        ffi.NativeFunction<
          DeviceVolumeResult Function(ffi.Int32, ffi.Int32, ffi.Int32)
        >
      >('device_volume_set');
  late final _device_volume_set = _device_volume_setPtr
      .asFunction<DeviceVolumeResult Function(int, int, int)>();

  DeviceVolumeResult device_volume_increment(int channel, int show_system_ui) {
    return _device_volume_increment(channel, show_system_ui);
  }

  late final _device_volume_incrementPtr =
      _lookup<
        ffi.NativeFunction<DeviceVolumeResult Function(ffi.Int32, ffi.Int32)>
      >('device_volume_increment');
  late final _device_volume_increment = _device_volume_incrementPtr
      .asFunction<DeviceVolumeResult Function(int, int)>();

  DeviceVolumeResult device_volume_decrement(int channel, int show_system_ui) {
    return _device_volume_decrement(channel, show_system_ui);
  }

  late final _device_volume_decrementPtr =
      _lookup<
        ffi.NativeFunction<DeviceVolumeResult Function(ffi.Int32, ffi.Int32)>
      >('device_volume_decrement');
  late final _device_volume_decrement = _device_volume_decrementPtr
      .asFunction<DeviceVolumeResult Function(int, int)>();
}

/// ── Result struct ───────────────────────────────────────────────────────────
final class DeviceVolumeResult extends ffi.Struct {
  @ffi.Int32()
  external int value;

  @ffi.Int32()
  external int min;

  @ffi.Int32()
  external int max;

  @ffi.Int32()
  external int is_muted;

  @ffi.Int32()
  external int error_code;
}

const int DV_OK = 0;

const int DV_UNSUPPORTED_OPERATION = 1;

const int DV_PERMISSION_DENIED = 2;

const int DV_NATIVE_FAILURE = 3;

const int DV_INVALID_VALUE = 4;

const int DV_BACKEND_NOT_AVAILABLE = 5;
